--- a/bin/index.html
+++ b/bin/index.html
@@ -1,14 +1,18 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
+	<style type="text/css">
+		html, body { height:100%; overflow:hidden; }
+		body { margin:0; }
+	</style>
 	<title>VoxelVerse</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="language" content="en" />
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<script src="js/swfobject.js" type="text/javascript"></script>
+	<link rel="shortcut icon" href="icon.ico">
+	<script type="text/javascript" src="swfobject.js"></script>
 	<script type="text/javascript">
 		var flashvars = {
+			guid: "81C7ACA6-E842-B640-A2D6-CF88E1E080DF" // this is an individual object that can be displayed
 		};
 		var params = {
 			wmode: "direct",
@@ -16,25 +20,29 @@
 			scale: "noScale",
 			allowFullscreen: "true",
 			allowFullScreenInteractive: "true",
-			allowScriptAccess: "always",
-			bgcolor: "#EEEEEE"
+			allowScriptAccess: "always"
 		};
 		var attributes = {
 			id:"VoxelVerse"
 		};
-		swfobject.embedSWF("VoxelVerse.swf", "altContent", "100%", "100%", "13.0.0.0", "expressInstall.swf", flashvars, params, attributes);
+		
+		swfobject.embedSWF("VoxelVerse.swf", 
+							   "altContent", 
+							   "100%", // could be 800 pixels too
+							   "100%", // could be 600 pixels too
+							   "15.0.0", 
+							   "expressInstall.swf", //URL for expressinstall, if available or false
+							   flashvars, 
+							   params, 
+							   attributes);		
 	</script>
-	<style type="text/css">
-		html, body { height:100%; overflow:hidden; }
-		body { margin:0; }
-	</style>
 </head>
 <body>
 	<div id="altContent">
 		<h1>VoxelVerse</h1>
-		<p><a href="http://get.adobe.com/flashplayer/?no_redirect">Requires the Flash 13</a></p>
-		/*<p>Here's a video showing it in action (if you don't have flash):</p>
-		<iframe title="YouTube video player" width="1280" height="750" src="https://www.youtube.com/watch?v=_5vqHNl6dVE" frameborder="0" allowfullscreen></iframe>*/
+		<p><a href="http://get.adobe.com/flashplayer/?no_redirect">Requires the Flash 15</a></p>
+		<p>Here's a video showing an OLD version in action (if you don't have flash):</p>
+		<iframe width="800" height="600" src="http://www.youtube-nocookie.com/embed/_5vqHNl6dVE" frameborder="0" allowfullscreen></iframe>
 	</div>
 </body>
 </html>
