made index file load newest version of swf, added model type to types

--- a/bin/index.html
+++ b/bin/index.html
@@ -26,7 +26,7 @@
 			id:"VoxelVerse"
 		};
 		
-		swfobject.embedSWF("VoxelVerse.swf", 
+		swfobject.embedSWF("VoxelVerse.swf?"+Math.random()*321, 
 							   "altContent", 
 							   "100%", // could be 800 pixels too
 							   "100%", // could be 600 pixels too
